# bazel-builds

./: BUILD.bazel  BUILD_INFO  WORKSPACE  _BUILD.bazel  index.bzl  package.json
docs/: index.html
docs/src/: ng_module.html  ng_rollup_bundle.html  ng_setup_workspace.html
docs/src/ng_package/: ng_package.html
docs/src/protractor/: protractor_web_test.html
src/: BUILD.bazel  esm5.bzl  external.bzl  ng_module.bzl  ng_perf.bzl  ng_rollup_bundle.bzl  ng_setup_workspace.bzl  rules_typescript.bzl
src/api-extractor/: BUILD.bazel  _BUILD.bazel  index.d.ts  index.js  index.mjs
src/builders/: bazel.d.ts  bazel.js  index.d.ts  index.js
src/ng_module/: ng_module.bzl  partial_compilation.bzl
src/ng_package/: BUILD.bazel  _BUILD.bazel  api.d.ts  api.mjs  cross_entry_points_imports.d.ts  cross_entry_points_imports.mjs  ng_package.bzl  packager.d.ts  packager.js  packager.mjs  packager.ts  rollup.config.js
src/ngc-wrapped/: BUILD.bazel  _BUILD.bazel  extract_i18n.d.ts  extract_i18n.js  extract_i18n.mjs  index.d.ts  index.js  index.mjs  ngc-wrapped-main.mjs  utils.d.ts  utils.mjs
src/protractor/: BUILD.bazel  protractor.conf.js  protractor_web_test.bzl
src/protractor/utils/: index.d.ts  index.js  index.ts
src/schematics/bazel-workspace/: index.d.ts  index.js
src/schematics/ng-add/: index.d.ts  index.js
src/schematics/ng-new/: index.d.ts  index.js  schema.json
src/schematics/utility/: json-utils.d.ts  json-utils.js  workspace-utils.d.ts  workspace-utils.js
src/types_bundle/: index.bzl  index.d.ts  index.js  index.mjs
test/ng_package/: BUILD.bazel  example-custom-entry-point-name.golden  example_package.golden
test/ng_package/example/: BUILD.bazel  package.json
test/ng_package/example/secondary/: BUILD.bazel
test/ngc-wrapped/: BUILD.bazel  tsconfig_template.ts
test/ngc-wrapped/empty/: BUILD.bazel
