load("//tools:defaults.bzl", "npm_package")

genrule(
    name = "workspace",
    outs = ["WORKSPACE"],
    cmd = "echo 'workspace(name=\"angular\")' > $@",
)

npm_package(
    name = "npm_package",
    srcs = [
        "BUILD.bazel",
        "index.bzl",
        "package.json",
        "//src:package_assets",
    ],
    # Re-host // which is just // in the public distro
    replacements = {
        "//": "//",
        "angular/": "angular/",
    },
    tags = ["release-with-framework"],
    deps = [":workspace"],
)
