load("//tools:defaults.bzl", "npm_package")

npm_package(
    name = "npm_package",
    srcs = glob(
        ["*"],
        exclude = ["yarn.lock"],
    ) + [
        "//src:package_assets",
        "//src/builders:package_assets",
        "//src/ng_package:package_assets",
        "//src/ngc-wrapped:package_assets",
        "//src/protractor:package_assets",
        "//src/schematics:package_assets",
        "//third_party/github.com/bazelbuild/bazel/src/main/protobuf:package_assets",
    ],
    packages = [
        "//docs",
    ],
    replacements = {
        "(#|\/\/)\\s+BEGIN-DEV-ONLY[\\w\W]+?(#|\/\/)\\s+END-DEV-ONLY": "",
        "//": "//",
        "npm_angular_bazel/": "npm_angular_bazel/",
    },
    tags = ["release-with-framework"],
    # Do not add more to this list.
    # Dependencies on the full npm_package cause long re-builds.
    visibility = ["//visibility:private"],
    deps = [
        "//src/builders",
        "//src/ng_package:lib",
        "//src/ngc-wrapped:ngc_lib",
        "//src/protractor/utils",
        "//src/schematics/bazel-workspace",
        "//src/schematics/ng-new",
    ],
)
