package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "modify_tsconfig",
    data = ["modify_tsconfig.js"],
    entry_point = "angular/src/modify_tsconfig.js",
)

nodejs_binary(
    name = "index_bundler",
    data = [
    ],
    entry_point = "@angular/compiler-cli/src/metadata/bundle_index_main.js",
)
