package(default_visibility = ["//packages:__subpackages__"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")


nodejs_binary(
    name = "api_extractor",
    data = [
        ":lib",
        "@npm//@bazel/typescript",
        "@npm//@microsoft/api-extractor",
    ],
    entry_point = ":index.ts",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package_assets",
    srcs = ["BUILD.bazel"],
)
