package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "rollup_for_ng_package",
    data = [
        
        "//rollup",
        
        "//rollup-plugin-commonjs",
        
        "//rollup-plugin-node-resolve",
        
        "//rollup-plugin-sourcemaps",
        
        "//typescript",
    ],
    templated_args = ["--bazel_patch_module_resolver"],
    entry_point = (
        
        "//:node_modules/rollup/dist/bin/rollup"
    ),
)

exports_files([
    "ng_package.bzl",
    "rollup.config.js",
    "terser_config.default.json",
])


