load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")



package(default_visibility = ["//visibility:public"])

nodejs_binary(
    name = "rollup_for_ng_package",
    data = [
        
        "//rollup",
        
        "//rollup-plugin-commonjs",
        
        "//rollup-plugin-node-resolve",
        
        "//rollup-plugin-sourcemaps",
        
        "//typescript",
    ],
    entry_point = (
        
        "//:node_modules/rollup/dist/bin/rollup"
    ),
    # TODO(josephperrott): update dependency usages to no longer need bazel patch module resolver
    # See: https://github.com/bazelbuild/rules_nodejs/wiki#--bazel_patch_module_resolver-now-defaults-to-false-2324
    templated_args = ["--bazel_patch_module_resolver"],
)

exports_files([
    "ng_package.bzl",
    "rollup.config.js",
])


