load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")



package(default_visibility = ["//visibility:public"])

nodejs_binary(
    name = "rollup_for_ng_package",
    data = [
        
        "//rollup",
        
        "//@rollup/plugin-commonjs",
        
        "//@rollup/plugin-node-resolve",
        
        "//rollup-plugin-sourcemaps",
        
        "//typescript",
    ],
    entry_point = (
        
        "//:node_modules/rollup/dist/bin/rollup"
    ),
    # Disable the linker and rely on patched resolution which works better on Windows
    # and is less prone to race conditions when targets build concurrently.
    templated_args = ["--nobazel_run_linker"],
)

exports_files([
    "ng_package.bzl",
    "rollup.config.js",
])


