package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")


nodejs_binary(
    name = "packager",
    data = [
        "lib",
        "@npm//shelljs",
    ],
    entry_point = ":packager.ts",
    install_source_map_support = False,
)

exports_files(["ng_package.bzl"])

filegroup(
    name = "package_assets",
    srcs = glob(["*.bzl"]) + ["BUILD.bazel"],
)
