package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")


nodejs_binary(
    name = "packager",
    data = [
        "lib",
        "@npm//shelljs",
    ],
    entry_point = ":packager.ts",
)

nodejs_binary(
    name = "rollup_for_ng_package",
    data = [
        "@npm//rollup",
        "@npm//rollup-plugin-commonjs",
        "@npm//rollup-plugin-node-resolve",
        "@npm//rollup-plugin-sourcemaps",
    ],
    entry_point = "@npm//:node_modules/rollup/dist/bin/rollup",
)

exports_files([
    "ng_package.bzl",
    "rollup.config.js",
    "terser_config.default.json",
])

filegroup(
    name = "package_assets",
    srcs = glob(["*.bzl"]) + [
        "BUILD.bazel",
        "rollup.config.js",
        "terser_config.default.json",
    ],
)
