package(default_visibility = ["//test:__subpackages__"])

load("//packages/bazel:index.bzl", "ng_module", "ng_package")

ng_module(
    name = "example",
    srcs = glob(["*.ts"]),
    module_name = "example",
    deps = ["//test/ng_package/example/secondary"],
)

ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
        "some-file.txt",
    ],
    entry_point = "packages/bazel/test/ng_package/example/index.js",
    deps = [
        ":example",
        "//test/ng_package/example/secondary",
    ],
)
